--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview",
     "test": "jest"
   },
+    "homepage": "https://radios0ul.github.io/awsm_kanban_brd",
   "dependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.6.1",
